--- a/frontend/src/pages/Problems.css
+++ b/frontend/src/pages/Problems.css
@@ -229,17 +229,11 @@
   font-size: var(--font-size-xs);
 }
 
-.problem-description {
-  color: var(--text-secondary);
-  line-height: 1.6;
-  margin-bottom: var(--space-6);
-  font-size: var(--font-size-base);
-}
-
 .problem-footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: var(--space-4);
 }
 
 .problem-meta {
@@ -362,10 +356,6 @@
 
   .problem-title {
     font-size: var(--font-size-lg);
-  }
-
-  .problem-description {
-    font-size: var(--font-size-sm);
   }
 }
 
